--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,5 +2,73 @@
 @tailwind components;
 @tailwind utilities;
 
-.markdown-render .p {
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
+body {
+  font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.markdown-render {
+  @apply text-slate-700;
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply pt-6 pb-2 font-bold leading-loose;
+  }
+
+  h1 {
+    @apply my-4  border-b border-slate-200 py-6 text-5xl;
+  }
+
+  h2 {
+    @apply mt-6 border-t border-slate-200 pt-10 text-3xl;
+  }
+
+  h3 {
+    @apply text-2xl;
+  }
+
+  h4 {
+    @apply text-xl;
+  }
+
+  h5 {
+    @apply text-lg;
+  }
+
+  p {
+    @apply py-2 text-base;
+
+    code {
+      @apply text-sm;
+    }
+  }
+
+  pre {
+    @apply overflow-y-auto rounded-md bg-slate-100 p-4;
+
+    code {
+      @apply rounded-none bg-transparent p-0 text-sm;
+    }
+  }
+
+  code {
+    @apply rounded-md bg-slate-100 p-1 font-mono;
+  }
+
+  ul {
+    @apply list-disc py-2 pl-8;
+
+    li {
+      @apply py-2;
+    }
+  }
+
+  img {
+    @apply w-full rounded-md;
+  }
 }
